--- a/id3kingserver/frontEnd/css/style.css
+++ b/id3kingserver/frontEnd/css/style.css
@@ -2,7 +2,7 @@
   font-family: 'Lato', sans-serif;
 }
 
-th, td{
+th, td {
   text-align:center;
 }
 
@@ -11,6 +11,20 @@ th, td{
     border-bottom: 1px solid #eee;
 }
 
+aside {
+  height: 900px;
+}
+aside nav {
+  padding-left:10px;
+  padding-top:20px;
+  border-left: 1px solid #eee;
+  width: 100%;
+  height: 100%;
+}
+
+.click{
+  cursor: pointer;;
+}
 .w5{
   width:20px !important;
 }
