Altri miglioramenti per il frontend: ora la table dispone di una header fissa. Inoltre, migliorato il formato (anche a livello di scraping) per il dislivello. Migliorato la logica del server: viene controllato se il db esiste all'avvio e, in caso non esista, ricreato

--- a/id3kingserver/frontEnd/css/style.css
+++ b/id3kingserver/frontEnd/css/style.css
@@ -2,15 +2,40 @@
   font-family: 'Lato', sans-serif;
 }
 
+body{
+  overflow-y:hidden;
+}
+body > div{
+  padding-right: 0 !important;
+}
+
 th, td {
   text-align:center;
 }
+th:hover:not(:last-child){
+  background:whiteSmoke;
+}
 
+.mainContainer section{
+  height:800px;
+  overflow-y:scroll;
+}
+.mainContainer header{
+  padding-top:15px;
+}
+.mainContainer section,
+.mainContainer header{
+  padding-right: 10px;
+}
 .mainHeader {
     padding-bottom: 9px;
     border-bottom: 1px solid #eee;
 }
 
+table{
+  table-layout:fixed;
+  margin-bottom:0 !important;
+}
 aside {
   height: 900px;
 }
