--- a/id3kingserver/frontEnd/css/style.css
+++ b/id3kingserver/frontEnd/css/style.css
@@ -55,18 +55,48 @@ table{
   margin-bottom:0 !important;
 }
 aside {
-  height: 900px;
+  height: calc(100% - 50px);
+  padding-top: 60px;
 }
 aside nav {
   padding-left:10px;
-  padding-top:20px;
   border-left: 1px solid #eee;
   width: 100%;
   height: 100%;
 }
 
+.filterOpener {
+  top: 80px;
+  right: 30px;
+  z-index: 1000;
+  width: 20px;
+  height: 30px;
+}
+.filterOpener:hover {
+  opacity: 0.6;
+}
+.filterOpener .glyphicon {
+  font-size: 1.6em;
+  color: gray;
+}
+
 .click{
   cursor: pointer;;
+}
+
+.middle {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: perspective(1px) translateY(-50%) translateX(-50%);
+}
+
+.absolute {
+  position: absolute;
+}
+
+.w0{
+  width: 0px !important
 }
 .w5{
   width:20px !important;
@@ -102,4 +132,17 @@ aside nav {
   width:400px !important;
   max-width:400px !important;
   min-width:400px !important;
+}
+
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    right: 0;
+    overflow-x: hidden;
+    padding-top: 60px;
+    transition: 0.5s;
+    border-left: 2px solid lightGray;
 }
