Modificato parte del server per gestire al meglio le date comprese tra il 1990 e il 2000; ancora improvements sul frontend, ora l'ordinamento per data funziona (a parte qualche caso particolare)

--- a/id3kingserver/frontEnd/css/style.css
+++ b/id3kingserver/frontEnd/css/style.css
@@ -144,5 +144,5 @@ aside nav {
     overflow-x: hidden;
     padding-top: 60px;
     transition: 0.5s;
-    border-left: 2px solid lightGray;
+    background: DarkTurquoise;
 }
