--- a/id3kingserver/frontEnd/css/style.css
+++ b/id3kingserver/frontEnd/css/style.css
@@ -1,139 +1,156 @@
-*{
-  font-family: 'Lato', sans-serif;
+* {
+    font-family: 'Lato', sans-serif;
 }
-
-body{
-  height:100vh;
-  overflow-y:hidden;
+body {
+    height: 100vh;
+    overflow-y: hidden;
 }
-body > div{
-  padding-right: 0 !important;
-  height:100%;
+body> div {
+    padding-right: 0 !important;
+    height: 100%;
 }
-
 .mainHeader {
-  height:60px;
-  border-bottom: 1px solid #eee;
+    height: 80px;
+    border-bottom: 1px solid #eee;
 }
-.mainHeader > div{
-  display:table-row;
-  height: 60px;
+.mainHeader .title {
+    display: table-row;
+    height: 55px;
 }
-.mainHeader > div > h1{
-  padding:0;
-  margin:0;
-  display:table-cell;
-  vertical-align: middle;
+.mainHeader .title > h1 {
+    padding: 0;
+    margin: 0;
+    display: table-cell;
+    vertical-align: middle;
 }
-
+.mainHeader .caption {
+    font-size: 16px;
+    font-style: italic;
+}
 th, td {
-  text-align:center;
+    text-align: center;
 }
-th{
-  border-bottom:0 !important;
+th {
+    border-bottom: 0 !important;
+    position: relative;
 }
-th:hover:not(:last-child){
-  background:whiteSmoke;
+th .glyphicon-chevron-down, th .glyphicon-chevron-up {
+    right: 0;
+    z-index: 10001;
+    font-size: 1.1em;
+    margin-top: 2px;
 }
-
-.mainContainer{
-  height: calc(100% - 60px);
+th .glyphicon-chevron-up:hover, th .glyphicon-chevron-down:hover {
+    opacity: 0.5;
 }
-.mainContainer section{
-  overflow-y:scroll;
-  height: calc(100% - 51px);
+th:hover:not(:last-child) {
+    background: whiteSmoke;
 }
-.mainContainer header{
-  padding-top:15px;
+.mainContainer {
+    height: calc(100% - 80px);
 }
-.mainContainer section,
-.mainContainer header{
-  padding-right: 10px;
+.mainContainer section {
+    overflow-y: scroll;
+    height: calc(100% - 51px);
 }
-table{
-  table-layout:fixed;
-  margin-bottom:0 !important;
+.mainContainer header {
+    padding-top: 15px;
+}
+.mainContainer section, .mainContainer header {
+    padding-right: 10px;
+}
+table {
+    table-layout: fixed;
+    margin-bottom: 0 !important;
 }
 aside {
-  height: calc(100% - 50px);
-  padding-top: 60px;
+    height: 900px;
+    padding-top:
 }
 aside nav {
-  padding-left:10px;
-  border-left: 1px solid #eee;
-  width: 100%;
-  height: 100%;
+    padding-left: 10px;
+    border-left: 1px solid #eee;
+    width: 100%;
+    height: 100%;
 }
-
 .filterOpener {
-  top: 80px;
-  right: 30px;
-  z-index: 1000;
-  width: 20px;
-  height: 30px;
+    top: 100px;
+    right: 30px;
+    z-index: 1000;
+    width: 20px;
+    height: 30px;
 }
 .filterOpener:hover {
-  opacity: 0.6;
+    opacity: 0.6;
 }
 .filterOpener .glyphicon {
-  font-size: 1.6em;
-  color: gray;
+    font-size: 1.6em;
+    color: gray;
 }
-
-.click{
-  cursor: pointer;;
+.click {
+    cursor: pointer;
 }
-
 .middle {
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: perspective(1px) translateY(-50%) translateX(-50%);
+    position: absolute;
+    ;
+    top: 50%;
+    left: 50%;
+    transform: perspective(1px) translateY(-50%) translateX(-50%);
 }
-
+.middleVertical {
+    position: absolute;
+    top: 50%;
+    transform: perspective(1px) translateY(-50%);
+}
+.middleHorizontal {
+    position: absolute;
+    left: 50%;
+    transform: perspective(1px) translateX(-50%);
+}
 .absolute {
-  position: absolute;
+    position: absolute;
 }
-
-.w0{
-  width: 0px !important
+.normalFont{
+  font-style: normal;
 }
-.w5{
-  width:20px !important;
+.w0 {
+    width: 0px !important
 }
-.w10{
-  width:40px !important;
+.w5 {
+    width: 20px !important;
 }
-.w15{
-  width:60px !important;
+.w10 {
+    width: 40px !important;
 }
-.w20{
-  width:80px !important;
+.w15 {
+    width: 60px !important;
 }
-.w25{
-  width:100px !important;
+.w20 {
+    width: 80px !important;
 }
-.w30{
-  width:120px !important;
+.w25 {
+    width: 100px !important;
 }
-.w35{
-  width:140px !important;
+.w30 {
+    width: 120px !important;
 }
-.w40{
-  width:160px !important;
+.w35 {
+    width: 140px !important;
 }
-.w45{
-  width:180px !important;
+.w40 {
+    width: 160px !important;
 }
-.w50{
-  width:200px !important;
+.w45 {
+    width: 180px !important;
 }
-.w100{
-  width:400px !important;
-  max-width:400px !important;
-  min-width:400px !important;
+.w50 {
+    width: 200px !important;
 }
-
+.w100 {
+    width: 400px !important;
+    max-width: 400px !important;
+    min-width: 400px !important;
+}
 .sidenav {
     height: 100%;
     width: 0;
@@ -142,7 +159,7 @@ aside nav {
     top: 0;
     right: 0;
     overflow-x: hidden;
-    padding-top: 60px;
+    padding-top: 80px;
     transition: 0.5s;
     background: DarkTurquoise;
 }
