--- a/id3kingserver/frontEnd/css/style.css
+++ b/id3kingserver/frontEnd/css/style.css
@@ -18,6 +18,8 @@ body {
     left: 0;
     background-color: black;
     opacity: 0.4;
+    width: calc(100% - 320px);
+    height: 100%;
 }
 body> div {
     padding-right: 0 !important;
@@ -62,13 +64,16 @@ th:hover:not(:last-child) {
 }
 .mainContainer {
     height: calc(100% - 80px);
+    width: 100%;
 }
 .mainContainer section {
-    overflow-y: scroll;
+    width: 100%;
     height: calc(100% - 51px);
+    overflow-y: scroll;
 }
 .mainContainer header {
     padding-top: 15px;
+    overflow:hidden;
 }
 .mainContainer section, .mainContainer header {
     padding-right: 10px;
@@ -77,19 +82,26 @@ table {
     table-layout: fixed;
     margin-bottom: 0 !important;
 }
+div.main{
+  max-width: calc(100% - 320px);
+}
 aside {
-    height: 900px;
-    padding-top:
+    height: 100%;
+    width: 320px;
+    padding-top;
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding-left: 15px;
 }
 aside nav {
-    padding-left: 10px;
     border-left: 1px solid #eee;
     width: 100%;
     height: 100%;
 }
 .filterOpener {
-    top: 100px;
-    right: 30px;
+    top: 10px;
+    right: 350px;
     z-index: 10002;
     width: 20px;
     height: 30px;
@@ -98,7 +110,7 @@ aside nav {
     opacity: 0.6;
 }
 .filterOpener .glyphicon {
-    font-size: 1.6em;
+    font-size: 1.8em;
     color: gray;
 }
 
@@ -289,46 +301,65 @@ aside nav {
 .normalFont {
     font-style: normal;
 }
+.fill{
+  width: 100%;
+  height: 100%;
+}
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+input[type='number'] {
+    -moz-appearance:textfield;
+}
 .w0 {
     width: 0px !important
+    min-width: 0px !important;
 }
 .w5 {
     width: 20px !important;
+    min-width: 20px !important;
 }
 .w10 {
     width: 40px !important;
+    min-width: 40px !important;
 }
 .w15 {
     width: 60px !important;
+    min-width: 60px !important;
 }
 .w18{
   width: 72px !important;
+  min-width: 72px !important;
 }
 .w20 {
     width: 80px !important;
+    min-width: 80px !important;
 }
 .w25 {
     width: 100px !important;
+    min-width: 100px !important;
 }
 .w30 {
     width: 120px !important;
+    min-width: 120px !important;
 }
 .w35 {
     width: 140px !important;
+    min-width: 140px !important;
 }
 .w40 {
     width: 160px !important;
+    min-width: 160px !important;
 }
 .w45 {
     width: 180px !important;
+    min-width: 180px !important;
 }
 .w50 {
     width: 200px !important;
+    min-width: 200px !important;
 }
 .w100 {
     width: 400px !important;
