Altri piccole fix sul frontend

--- a/id3kingserver/frontEnd/css/style.css
+++ b/id3kingserver/frontEnd/css/style.css
@@ -4,6 +4,7 @@
 body {
     height: 100vh;
     overflow-y: hidden;
+    padding-left: 15px;
 }
 .watermark {
     transition: background-color 500ms linear;
